Cleanup some stuff